--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,11 @@ android {
     buildToolsVersion '29.0.3'
 
     defaultConfig {
-        applicationId "com.pa.boling.paperless"
+        if (isSimple.toBoolean()) {
+            applicationId "com.xlk.boling.paperless.simple"
+        } else {
+            applicationId "com.pa.boling.paperless"
+        }
         minSdkVersion 23
         targetSdkVersion 28
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
