--- a/gradle.properties
+++ b/gradle.properties
@@ -25,5 +25,5 @@ org.gradle.jvmargs=-Xmx1024m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#组件独立调试开关, 每次更改值后要同步工程
+#是否是简易版, 每次更改值后要同步工程
 isSimple = true
